fixed credentials for root db user

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
 
 before_install:
   - sudo apt-get update > /dev/null
-  - mysql -e "create database IF NOT EXISTS shopware;" -uroot -proot
+  - mysql -e "create database IF NOT EXISTS shopware;" -uroot
 
 install:
   # ant Build system
