--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
   - cd ./../..
   - cp -r ./Core ./shopware/engine/Shopware/Plugins/Community
   # add coveralls support
-  - php composer.phar require --dev "satooshi/php-coveralls:dev-master"
+  - php ./composer.phar require --dev "satooshi/php-coveralls:dev-master"
 
 before_script:
   - cd ./engine/Shopware/Plugins/Community/Core/SatagMd5Osc
