--- a/.travis.yml
+++ b/.travis.yml
@@ -41,5 +41,5 @@ before_script:
 
 script: phpunit --coverage-clover build/logs/clover.xml
 
-after_script: php ./../../../../../../vendor/bin/coveralls -v -c=./../../../../../../.coveralls.yml
+after_script: php ./../../../../../../vendor/bin/coveralls -v -c "./../../../../../../.coveralls.yml"
 
