--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,5 +1,5 @@
 service_name: travis-ci
 
-src_dir: .
+src_dir: ./
 coverage_clover: build/logs/clover.xml
 json_path: build/logs/coveralls-upload.json
